--- a/app/scripts/templates/asset.ejs
+++ b/app/scripts/templates/asset.ejs
@@ -1,19 +1,27 @@
-<td><%= model.get('status') %></td>
-<td><%= model.get('asset_name') %></td>
-<td><%= model.getDatePurchased() %></td>
+<td>
+    <%= model.get( 'status') %>
+</td>
+<td>
+    <%= model.get( 'asset_name') %>
+</td>
+<td>
+    <%= model.getDatePurchased() %>
+</td>
 <td></td>
-<td><%= model.get('serial_number') %></td>
+<td>
+    <%= model.get( 'serial_number') %>
+</td>
 <td style="text-align:center">
-  <a href="/assets/<%= model.get('_id') %>"  data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip view-details" data-original-title="View Details">
-	  <span class="glyphicon glyphicon-search"> </span>
-	</a>
-  <button type="button" data-toggle="modal" data-target="#edit-modal" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip edit-asset" data-original-title="Edit">
-    <span class="glyphicon glyphicon-edit"></span>
-  </button>
-  <button type="button" data-toggle="tooltip" data-placement="bottom" title="Assign" class="btn btn-default btn-xs tool-tip assign-asset">
-    <span class="glyphicon glyphicon-hand-up"></span>
-  </button>
-  <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip delete-asset">&nbsp;x&nbsp;</button>
+    <a href="/assets/<%= model.get('_id') %>" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip view-details" data-original-title="View Details">
+        <span class="glyphicon glyphicon-search"></span>
+    </a>
+    <button type="button" data-toggle="modal" data-target="#edit-modal" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip edit-asset" data-original-title="Edit">
+        <span class="glyphicon glyphicon-edit"></span>
+    </button>
+    <button type="button" data-toggle="tooltip" data-placement="bottom" title="Assign" class="btn btn-default btn-xs tool-tip assign-asset">
+        <span class="glyphicon glyphicon-hand-up"></span>
+    </button>
+    <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip delete-asset">&nbsp;x&nbsp;</button>
 </td>
 <script>
 	$('.tool-tip').tooltip();
