--- a/app/scripts/templates/employee.ejs
+++ b/app/scripts/templates/employee.ejs
@@ -1,21 +1,33 @@
-<td><%= model.get('assets').length %></td>
-<td><%= model.getFullName() %></td>
-<td><%= model.getDateOfBirth() %></td>
-<td><%= model.getDateEmployed() %></td>
-<td><%= model.get('email') %></td>
-<td><%= model.get('user_role') %></td>
+<td>
+    <%=model.get( 'assets').length %>
+</td>
+<td>
+    <%=model.getFullName() %>
+</td>
+<td>
+    <%=model.getDateOfBirth() %>
+</td>
+<td>
+    <%=model.getDateEmployed() %>
+</td>
+<td>
+    <%=model.get( 'email') %>
+</td>
+<td>
+    <%=model.get( 'user_role') %>
+</td>
 <td style="text-align:center">
-  <a href="/employees/<%= model.get('_id') %>" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip view-details" data-original-title="View Details">
-    <span class="glyphicon glyphicon-search"></span>
-  </a>
-  <button type="button" data-toggle="modal" data-target="#edit-modal" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip edit-employee" data-original-title="Edit">
-    <span class="glyphicon glyphicon-edit"></span>
-  </button>
-  <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip reset-password" data-original-title="Reset Password">
-    <span class="glyphicon glyphicon-lock"></span>
-  </button>
-  <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-danger btn-xs tool-tip delete-employee" data-original-title="Delete">&nbsp;x&nbsp;</button>
+    <a href="/employees/<%= model.get('_id') %>" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip view-details" data-original-title="View Details">
+        <span class="glyphicon glyphicon-search"></span>
+    </a>
+    <button type="button" data-toggle="modal" data-target="#edit-modal" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip edit-employee" data-original-title="Edit">
+        <span class="glyphicon glyphicon-edit"></span>
+    </button>
+    <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip reset-password" data-original-title="Reset Password">
+        <span class="glyphicon glyphicon-lock"></span>
+    </button>
+    <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-danger btn-xs tool-tip delete-employee" data-original-title="Delete">&nbsp;x&nbsp;</button>
 </td>
 <script>
-  $('.tool-tip').tooltip();
+	$('.tool-tip').tooltip();
 </script>
