--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,12 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
     color: #000;
     padding: 0.2em 0;
 }
+
+input, textarea {
+	border-radius: 0 !important;
+	box-shadow: none !important;
+}
+
 textarea.form-control {resize:vertical !important; }
 
 /* Space out content a bit */
@@ -115,7 +121,7 @@ $navbar-bg: #cef274;
 .btn-add, .btn-edit, .btn-reset{
   color: #ffffff;
   font-weight: bold;
-  border-color: #ef5b00 !important;
+  border-color: #d14e1b !important;
   background-color: #ef5b00 !important;
   &:hover {
     color: #ffffff;
@@ -131,6 +137,10 @@ $navbar-bg: #cef274;
   &:hover {
     background-color: #bde064 !important;
   }
+}
+
+button.selectpicker {
+	border-radius: 0 !important;
 }
 
 .main-nav {
@@ -190,7 +200,7 @@ $navbar-bg: #cef274;
 
 .asset-entry, .employee-entry {
   .btn {
-    border-bottom: 1px solid #333;
+    border-bottom: 2px solid #aaa;
   }
   &:hover {
     td {
@@ -214,4 +224,14 @@ label span.email-error {
 
 .error span.email-error {
   display: inline;
+}
+
+.panel-heading {
+	h4 {
+		text-align: center;
+	}
+}
+
+.dropdown-menu.open {
+	border-radius: 0;
 }
